tests/NormalTests/paczka1/fuzzy1/76404310.err
Error in line 15: zFsu S292 4L,6
Error in line 24: RM2lwo2 S209 98,5
Error in line 35: zFsu S292 117,8
